--- a/app/src/main/res/layout/issue_detail_issue_view.xml
+++ b/app/src/main/res/layout/issue_detail_issue_view.xml
@@ -2,7 +2,6 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -14,6 +13,7 @@
         card_view:cardUseCompatPadding="true"
         card_view:cardElevation="8dp"
         card_view:cardCornerRadius="3dp"
+
         android:id="@+id/cardView"
         android:layout_margin="@dimen/gapMedium">
 
@@ -22,72 +22,93 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <RelativeLayout
+            <LinearLayout
+                android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/textTitle"
                     style="@style/TextAppearance.AppCompat.Headline"
-                    android:textSize="@dimen/textSizeMedium"
+                    android:layout_margin="@dimen/gapMedium" />
+
+                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                    xmlns:tools="http://schemas.android.com/tools"
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/material_drawer_item_profile"
+                    android:id="@+id/author"
                     android:layout_alignParentTop="true"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_marginLeft="@dimen/gapLarge"
-                    android:layout_marginStart="@dimen/gapLarge"
-                    android:layout_marginTop="@dimen/gapMedium"
-                    android:layout_marginBottom="@dimen/gapMedium"
-                    android:layout_toLeftOf="@+id/textNum"
-                    android:layout_toStartOf="@+id/textNum"
-                    android:layout_marginRight="@dimen/gapMedium"
-                    android:layout_marginEnd="@dimen/gapMedium" />
+                    android:paddingLeft="@dimen/material_drawer_vertical_padding"
+                    android:paddingStart="@dimen/material_drawer_vertical_padding"
+                    android:paddingRight="@dimen/material_drawer_vertical_padding"
+                    android:paddingEnd="@dimen/material_drawer_vertical_padding"
+                    android:layout_margin="@dimen/gapMedium">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="24dp"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:id="@+id/textNum"
-                    android:textSize="@dimen/textSizeMedium"
-                    android:layout_alignTop="@+id/textTitle"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginRight="@dimen/gapMedium"
-                    android:layout_marginEnd="@dimen/gapMedium" />
+                    <com.mikepenz.materialdrawer.view.BezelImageView
+                        android:id="@+id/profileIcon"
+                        android:layout_width="@dimen/material_drawer_item_profile_icon"
+                        android:layout_height="@dimen/material_drawer_item_profile_icon"
+                        android:layout_marginTop="@dimen/material_drawer_item_profile_icon_padding"
+                        android:layout_marginBottom="@dimen/material_drawer_item_profile_icon_padding"
+                        android:layout_marginRight="@dimen/material_drawer_item_profile_icon_padding"
+                        android:layout_marginEnd="@dimen/material_drawer_item_profile_icon_padding"
+                        android:layout_gravity="center_vertical"
+                        android:clickable="false"
+                        android:elevation="1dp"
+                        app:biv_maskDrawable="@drawable/circle_mask" />
 
-                <ImageView
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
-                    android:id="@id/avatarAuthor"
-                    android:layout_alignTop="@+id/textAuthor"
-                    android:layout_alignLeft="@+id/textTitle"
-                    android:layout_alignStart="@+id/textTitle"
-                    android:layout_marginBottom="@dimen/gapLarge" />
+                    <LinearLayout
+                        android:layout_toRightOf="@id/profileIcon"
+                        android:layout_toEndOf="@id/profileIcon"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:orientation="vertical">
 
-                <TextView
-                    android:layout_width="wrap_content"
+                        <TextView
+                            android:id="@+id/name"
+                            android:fontFamily="sans-serif-medium"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="@dimen/material_drawer_item_profile_text"
+                            android:gravity="center_vertical|left"
+                            android:lines="1"
+                            android:singleLine="true"
+                            tools:text="Some drawer text" />
+
+                        <TextView
+                            android:id="@+id/email"
+                            android:fontFamily="sans-serif"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="@dimen/material_drawer_item_profile_description"
+                            android:gravity="center_vertical|left"
+                            android:lines="1"
+                            android:singleLine="true"
+                            tools:text="Some drawer text" />
+                    </LinearLayout>
+                </RelativeLayout>
+
+                <com.wefika.flowlayout.FlowLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:id="@+id/textAuthor"
-                    android:gravity="center_vertical"
-                    android:layout_marginLeft="@dimen/gapMedium"
-                    android:layout_marginStart="@dimen/gapMedium"
-                    android:layout_below="@+id/textTitle"
-                    android:layout_toRightOf="@id/avatarAuthor"
-                    android:layout_toEndOf="@id/avatarAuthor"
-                    android:layout_alignRight="@+id/textTitle"
-                    android:layout_alignEnd="@+id/textTitle" />
+                    android:id="@+id/labelsLayout"
+                    android:gravity="start|top"
+                    android:layout_margin="@dimen/gapMedium" />
 
-                <ImageView
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:id="@+id/pullRequest"
-                    android:layout_below="@+id/textNum"
-                    android:layout_alignRight="@+id/textNum"
-                    android:layout_alignEnd="@+id/textNum"
-                    android:layout_marginTop="@dimen/gapLarge" />
-            </RelativeLayout>
+            </LinearLayout>
+
+            <WebView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                style="@style/TextAppearance.AppCompat.Caption"
+                android:id="@+id/webBody"
+                android:layout_margin="@dimen/gapMedium"
+                android:background="@android:color/transparent"
+                tools:text="dnwjkedn eobfeibfo woeubfouew k wo wo owupij pw wouh fwohrwp" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -95,7 +116,7 @@
                 style="@style/TextAppearance.AppCompat.Caption"
                 android:id="@+id/textBody"
                 android:layout_margin="@dimen/gapMedium"
-                tools:text="dnwjkedn eobfeibfo woeubfouew k wo wo owupij pw wouh fwohrwp"/>
+                tools:text="dnwjkedn eobfeibfo woeubfouew k wo wo owupij pw wouh fwohrwp" />
         </LinearLayout>
     </android.support.v7.widget.CardView>
 </merge>
