--- a/app/src/main/res/layout/fab.xml
+++ b/app/src/main/res/layout/fab.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <com.getbase.floatingactionbutton.FloatingActionButton xmlns:android="http://schemas.android.com/apk/res/android"
-                                                       xmlns:fab="http://schemas.android.com/apk/res-auto"
-                                                       android:layout_width="wrap_content"
-                                                       android:layout_height="wrap_content"
-                                                       fab:fab_colorNormal="?attr/colorAccent"
-                                                       fab:fab_colorPressed="?attr/colorPrimaryDark"
-                                                       android:layout_alignParentBottom="true"
-                                                       android:layout_centerHorizontal="true"
-                                                       android:id="@id/fabButton"/>
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    fab:fab_colorNormal="?colorControlNormal"
+    fab:fab_colorPressed="?colorControlHighlight"
+    android:layout_alignParentBottom="true"
+    android:layout_centerHorizontal="true"
+    android:id="@id/fabButton" />
