--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,9 @@
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/repos_primary_dark</item>
         <item name="colorAccent">@color/repos_accent</item>
+        <item name="colorControlNormal">@color/repos_accent</item>
+        <item name="colorControlActivated">@color/repos_accent_dark</item>
+        <item name="colorControlHighlight">@color/repos_accent_dark</item>
         <item name="gitskarios_divider">@color/repos_divider</item>
         <item name="gitskarios_primary_text">@color/repos_primary_text</item>
         <item name="gitskarios_secondary_text">@color/repos_secondary_text</item>
@@ -71,6 +74,11 @@
     </style>
     <style name="SpotDialog.CreatingIssue">
         <item name="DialogTitleText">@string/creating_issue</item>
+    </style>
+
+    <style name="menu_labels_style">
+        <item name="android:background">@drawable/fab_label_background</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
 </resources>
