Issue story ddetail, timeline

--- a/app/src/main/res/layout/activity_issue_detail.xml
+++ b/app/src/main/res/layout/activity_issue_detail.xml
@@ -14,7 +14,9 @@
         <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/recycler" />
+            android:id="@+id/recycler"
+            android:paddingBottom="56dp"
+            android:clipToPadding="false"/>
 
         <include layout="@layout/fab"
             android:layout_width="wrap_content"
