--- a/app/src/release/res/values/config.xml
+++ b/app/src/release/res/values/config.xml
@@ -4,5 +4,6 @@
     <string name="app_name">GitSkarios</string>
     <string name="account_name">Github account</string>
     <string name="account_type">com.alorma.github.account</string>
+    <string name="oauth_scheme">gitskarios</string>
 
 </resources>
