Fixe various errors from crashlytics Fixed Referenced / Merged events on issue timeline
Fix null pointers

Fix noifications bubble size

Notifications fix

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -72,4 +72,6 @@
 
     <dimen name="label_size_height">32dp</dimen>
     <dimen name="label_size_width">56dp</dimen>
+
+    <dimen name="notification_bubble">6dp</dimen>
 </resources>
