--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -7,5 +7,6 @@
     android:layout_width="match_parent"
     android:minHeight="?attr/actionBarSize"
     android:background="?attr/colorPrimary"
-    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+    app:contentInsetStart="@dimen/second_keyline"
+    app:theme="@style/Toolbar.AppCompat.Responsive"
+    app:popupTheme="@style/Toolbar.Popup.AppCompat"/>
