--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,54 +1,13 @@
 <resources>
 
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="android:windowBackground">@color/white</item>
-        <item name="android:windowContentOverlay">@null</item>
-        <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
-        <item name="colorPrimary">@color/primary</item>
-        <item name="colorPrimaryDark">@color/repos_primary_dark</item>
-        <item name="colorAccent">@color/repos_accent</item>
-        <item name="colorControlNormal">@color/repos_accent</item>
-        <item name="colorControlActivated">@color/repos_accent_dark</item>
-        <item name="colorControlHighlight">@color/repos_accent_dark</item>
-        <item name="gitskarios_divider">@color/repos_divider</item>
-        <item name="gitskarios_primary_text">@color/repos_primary_text</item>
-        <item name="gitskarios_secondary_text">@color/repos_secondary_text</item>
-        <item name="gitskarios_primary_light">@color/repos_primary_light</item>
-        <item name="gitskarios_icons">@color/repos_icons</item>
-    </style>
 
-    <style name="AppTheme.Normal" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="android:windowBackground">@color/white</item>
-        <item name="android:windowContentOverlay">@null</item>
-        <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
-        <item name="colorPrimary">@color/primary</item>
-        <item name="colorPrimaryDark">@color/repos_primary_dark</item>
-        <item name="colorAccent">@color/repos_accent</item>
-        <item name="colorControlNormal">@color/repos_accent</item>
-        <item name="colorControlActivated">@color/repos_accent_dark</item>
-        <item name="colorControlHighlight">@color/repos_accent_dark</item>
-        <item name="gitskarios_divider">@color/repos_divider</item>
-        <item name="gitskarios_primary_text">@color/repos_primary_text</item>
-        <item name="gitskarios_secondary_text">@color/repos_secondary_text</item>
-        <item name="gitskarios_primary_light">@color/repos_primary_light</item>
-        <item name="gitskarios_icons">@color/repos_icons</item>
-    </style>
-
-    <style name="AppTheme.Repos"></style>
 
     <style name="DrawerArrowStyle" parent="Widget.AppCompat.DrawerArrowToggle">
         <item name="spinBars">true</item>
         <item name="color">@color/white</item>
     </style>
 
-    <!-- Base application theme. -->
-    <style name="AppThemeGists" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="colorPrimary">@color/gist_primary</item>
-        <item name="colorPrimaryDark">@color/gist_primary_dark</item>
-        <item name="colorAccent">@color/gist_accent</item>
-        <item name="colorControlNormal">@color/gist_accent</item>
-        <item name="colorControlHighlight">@color/gist_accent_dark</item>
-    </style>
+
 
     <style name="GistFileRowToolbar" parent="Theme.AppCompat.NoActionBar">
         <item name="android:textColorSecondary">@color/gist_accent</item>
@@ -115,8 +74,36 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
-    <string name="comment_issue">Adding comment</string>
-    <string name="loading_milestones">Loading milestones</string>
-    <string name="adding_milestone">Adding milestone</string>
-    <string name="loading_issue">Loading issue</string>
+    <style name="Custom.Widget.Toolbar" parent="Widget.AppCompat.Toolbar">
+
+        <item name="maxButtonHeight">48dp</item>
+        <item name="android:paddingLeft">@dimen/toolbar_h_padding</item>
+        <item name="android:paddingRight">@dimen/toolbar_h_padding</item>
+        <item name="contentInsetStart">@dimen/first_keyline</item>
+    </style>
+
+
+    <style name="Custom.Widget.Toolbar.Button.Navigation" parent="Widget.AppCompat.Toolbar.Button.Navigation">
+        <item name="android:minWidth">48dp</item>
+    </style>
+
+
+    <style name="Custom.Widget.ActionButton.Overflow" parent="Widget.AppCompat.ActionButton.Overflow">
+        <item name="android:paddingLeft">0dp</item>
+        <item name="android:paddingRight">0dp</item>
+    </style>
+
+
+    <style name="Custom.Widget.Actionbar" parent="Widget.AppCompat.ActionBar.Solid"></style>
+
+
+    <style name="Custom.Widget.ActionMode" parent="Widget.AppCompat.ActionMode">
+        <item name="android:paddingLeft">@dimen/toolbar_h_padding</item>
+        <item name="android:paddingRight">@dimen/toolbar_h_padding</item>
+    </style>
+
+
+    <style name="Custom.Widget.ActionButton.CloseMode" parent="Widget.AppCompat.ActionButton.CloseMode">
+        <item name="android:layout_marginRight">20dp</item>
+    </style>
 </resources>
