--- a/app/src/main/res/menu/repo_detail_activity.xml
+++ b/app/src/main/res/menu/repo_detail_activity.xml
@@ -1,17 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/share_repo"
         android:title="@string/action_share_repo"
         app:showAsAction="ifRoom"
-        android:orderInCategory="3"/>
+        android:orderInCategory="1" />
+
+    <item
+        android:id="@id/action_repo_star"
+        android:title="@string/menu_star"
+        app:showAsAction="never"
+        android:orderInCategory="4" />
+    <item
+        android:id="@id/action_repo_watch"
+        android:title="@string/menu_watch"
+        app:showAsAction="never"
+        android:orderInCategory="5" />
 
     <item
         android:title="@string/show_parent"
         android:id="@+id/action_show_parent"
-        app:showAsAction="never"/>
+        app:showAsAction="never"
+        android:orderInCategory="10"/>
 
 </menu>
