--- a/app/src/main/res/menu/issue_detail.xml
+++ b/app/src/main/res/menu/issue_detail.xml
@@ -3,15 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.alorma.github.ui.activity.IssueDetailActivity">
 
-    <item android:title="@string/issue_edit_milestone"
+    <item
+        android:title="@string/issue_edit_milestone"
         android:id="@+id/issue_edit_milestone"
-        app:showAsAction="never"/>
-<!--
-    <item android:title="@string/issue_edit_labels"
-        android:id="@+id/issue_edit_labels"
-        app:showAsAction="never"/>
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/share_issue"
+        android:title="@string/action_share_issue"
+        app:showAsAction="ifRoom"
+        android:orderInCategory="1" />
+    <!--
+        <item android:title="@string/issue_edit_labels"
+            android:id="@+id/issue_edit_labels"
+            app:showAsAction="never"/>
 
-    <item android:title="@string/issue_edit_assigne"
-        android:id="@+id/issue_edit_assigne"
-        app:showAsAction="never"/>-->
+        <item android:title="@string/issue_edit_assigne"
+            android:id="@+id/issue_edit_assigne"
+            app:showAsAction="never"/>-->
 </menu>
