--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="AppTheme" parent="AppTheme.AppCompat.Default">
         <item name="android:windowBackground">@color/white</item>
-        <item name="android:windowContentOverlay">@null</item>
+        <item name="windowActionModeOverlay">true</item>
         <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
         <item name="colorPrimary">@color/primary</item>
-        <item name="colorPrimaryDark">@color/repos_primary_dark</item>
-        <item name="colorAccent">@color/repos_accent</item>
-        <item name="colorControlNormal">@color/repos_accent</item>
-        <item name="colorControlActivated">@color/repos_accent_dark</item>
-        <item name="colorControlHighlight">@color/repos_accent_dark</item>
-        <item name="gitskarios_divider">@color/repos_divider</item>
-        <item name="gitskarios_primary_text">@color/repos_primary_text</item>
-        <item name="gitskarios_secondary_text">@color/repos_secondary_text</item>
-        <item name="gitskarios_primary_light">@color/repos_primary_light</item>
-        <item name="gitskarios_icons">@color/repos_icons</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
+        <item name="colorAccent">@color/accent</item>
+        <item name="colorControlNormal">@color/accent</item>
+        <item name="colorControlActivated">@color/accent_dark</item>
+        <item name="colorControlHighlight">@color/accent_dark</item>
+        <item name="gitskarios_divider">@color/divider</item>
+        <item name="gitskarios_primary_text">@color/primary_text</item>
+        <item name="gitskarios_secondary_text">@color/secondary_text</item>
+        <item name="gitskarios_primary_light">@color/primary_light</item>
+        <item name="gitskarios_icons">@color/icons</item>
     </style>
 
     <!-- Default application theme. -->
@@ -24,7 +24,6 @@
         <item name="windowActionModeOverlay">true</item>
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primary_dark</item>
-
 
     </style>
 
@@ -55,7 +54,7 @@
 
         <!-- Action Mode styles -->
         <item name="actionModeStyle">@style/Custom.Widget.ActionMode</item>
-        <item name="actionModeBackground">@color/white</item>
+        <item name="actionModeBackground">@color/primary_dark</item>
         <item name="actionModeCloseButtonStyle">@style/Custom.Widget.ActionButton.CloseMode</item>
 
 
