--- a/app/src/debug/res/values/config.xml
+++ b/app/src/debug/res/values/config.xml
@@ -4,5 +4,5 @@
     <string name="app_name">Gitskarios DEV</string>
     <string name="account_name">Github account DEV</string>
     <string name="account_type">com.alorma.github.debug.account</string>
-    <string name="oauth_scheme">gitskariosdevel</string>
+    <string name="oauth_scheme">gitskariosgithubdevel</string>
 </resources>
